updating personal database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,9 @@ development:
   encoding: unicode
   database: time_midpoint_development
   pool: 5
-  username: time_midpoint
+  username: jonathantrope
   password:
+  host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,13 +44,15 @@ test:
   encoding: unicode
   database: time_midpoint_test
   pool: 5
-  username: time_midpoint
+  username: jonathantrope
   password:
+  host: localhost
 
 production:
   adapter: postgresql
   encoding: unicode
   database: time_midpoint_production
   pool: 5
-  username: time_midpoint
+  username: jonathantrope
   password:
+  host: localhost
