adding Google API KEY to gitignored config/initializers/google.rb and adding google maps script tag to application.html.erb

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 # Ignore database yaml file
 /config/database.yml
 /scratch/notes
+
+# Ignore Jonathan's google API Key
+/config/initializers/google.rb
